--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,10 @@
     position: relative;
   }
   .top-container{
-
+    width : 100%;
+    height : 100%
     padding-top: 100px;
+    margin-top: 100px;
   }
   .middle-container{
 
@@ -56,13 +58,13 @@
   .top-bulb{
     display: : inline-block;
     position: absolute;
-    top: 100px  ;
+    top: 100px;
   }
   .Me{
     display: inline-block;
     position: absolute;
-    top: 50%;
-    left:50%;
+    top: 325px;
+    right: 100px;
     font-family: 'Sacramento', cursive;
   }
   .bottom-bulb{
@@ -85,3 +87,8 @@
  .g2{
    display: inline-block;
  }
+hr{
+  border: 0;
+  border-top: 15px;
+  width: 10%;
+}
