--- a/css/styles.css
+++ b/css/styles.css
@@ -1,94 +1,51 @@
   body{
    margin: 0 20px;
-   /*text-align: center;*/
-   font-family: 'Montserrat', sans-serif;
-   background-color: #b6eb7a;
+   text-align: center;
   }
   h1{
     margin-top: 0;
     font-family: 'Sacramento', cursive;
-    font-size: 90px;
+    display: block;
+    font-size: 5.625rem;
+    margin-bottom: 0;
   }
   h2{
-    margin-top: 0;
+    margin: 0,auto;
     font-family: 'Montserrat', sans-serif;
-    font-size: 50px;
   }
   h3{
-    display: inline-block;
     font-family: 'Merriweather', serif;
-    font-size: 35px;
+    margin: 0,auto;
   }
   p{
-    display: inline-block;
-    font-size: 35px;
+    display: block;
+    font-family: 'Merriweather', serif;
+    margin: 0,auto;
+    font-size: 2rem;
   }
   a{
-    display: inline-block;
-    font-size: 35px;
+    font-size: 1.75rem;
   }
   a:hover{
     color: red;
   }
-  .skills{
-    display: inline-block;
-    text-align: center;
-    /*position: absolute;*/
-  }
-  .skill-row1{
-    display: inline-block;
-    position: relative;
-  }
-  .top-container{
-    width : 100%;
-    height : 100%
-    padding-top: 100px;
-    margin-top: 100px;
-  }
-  .middle-container{
-
-  }
-  .bottom-container{
-
-  }
-  .robot{
-    display: inline-block;
-
-  }
-  .top-bulb{
-    display: : inline-block;
-    position: absolute;
-    top: 100px;
-  }
-  .Me{
-    display: inline-block;
-    position: absolute;
-    top: 325px;
-    right: 100px;
-    font-family: 'Sacramento', cursive;
-  }
-  .bottom-bulb{
-    display: : inline-block;
-    position: absolute;
-    bottom: 0px;
-    right: 0;
-  }
- .Me2{
-   font-family: 'Merriweather', serif;
-   font-size: 50px;
+ .top-container{
+   background-color: #81f5ff;
+   padding-top: 40px;
+   margin-bottom: 40px;
  }
- .profile{
-   text-align: center;
+ .cloud-top{
+   position: absolute;
+   right: 25%;
  }
- .g1{
+ .cloud-bottom{
+   display: block;
+   position: absolute;;
+   left: 25%;
+ }
+ .intro{
    display: inline-block;
-   text-align: left;
+   position: absolute;;
+   top: 100px;
+   left: 40%;
  }
- .g2{
-   display: inline-block;
- }
-hr{
-  border: 0;
-  border-top: 15px;
-  width: 10%;
-}
